# pygments-pharo-lexer

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  publish.yml
src/pygments_pharo/: __init__.py  lexer.py
tests/: test_pharo_lexer.py
